--- a/ListFy-Pwa-Wasm/ListFy-Pwa-Wasm.csproj
+++ b/ListFy-Pwa-Wasm/ListFy-Pwa-Wasm.csproj
@@ -16,6 +16,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Components\NavMenu.razor" />
+    <Content Remove="Pages\Home.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Components\NavMenu.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.1" PrivateAssets="all" />
   </ItemGroup>
